# Nax

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: debug.h  errors.h  event.h  loader.h  opengl.h  shader.h  utilities.h  vao.h  window.h
libraries/assimp-4.1.0/: DartConfiguration.tcl  assimp.pc  cmake_install.cmake  revision.h
libraries/assimp-4.1.0/code/: cmake_install.cmake
libraries/assimp-4.1.0/contrib/: cmake_install.cmake
libraries/assimp-4.1.0/contrib/irrXML/: cmake_install.cmake
libraries/assimp-4.1.0/test/: CTestTestfile.cmake  cmake_install.cmake
libraries/assimp-4.1.0/test/headercheck/: CTestTestfile.cmake  cmake_install.cmake
libraries/assimp-4.1.0/tools/assimp_cmd/: cmake_install.cmake
libraries/glad/include/glad/: glad.h
libraries/glad/source/: glad.c
libraries/glad/src/: glad.c
resources/shaders/: basic.fragment.glsl  basic.vertex.glsl  texture.fragment.glsl
source/: debug.cpp  errors.cpp  event.cpp  loader.cpp  main.cpp  opengl.cpp  shader.cpp  utilities.cpp  vao.cpp  window.cpp
tests/unit-tests/: event-test.cpp  loader_test.cpp
